--- a/index.html
+++ b/index.html
@@ -614,6 +614,52 @@
       border-radius: 12px 12px 0 0;  
     }  
 
+    /* Portfolio Submenu Styles */
+    .portfolio-submenu {
+      position: relative;
+    }
+
+    .portfolio-submenu-btn {
+      width: 100%;
+      text-align: left;
+      background: transparent;
+      border: none;
+      color: white;
+      padding: 12px 16px;
+      font-size: 15px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      transition: all 0.3s ease;
+    }
+
+    .portfolio-submenu-btn:hover {
+      background-color: rgba(255,255,255,0.1);
+      transform: translateX(5px);
+    }
+
+    .portfolio-submenu-content {
+      display: none;
+      background: rgba(0,0,0,0.2);
+      padding-left: 20px;
+    }
+
+    .portfolio-submenu:hover .portfolio-submenu-content {
+      display: block;
+    }
+
+    .portfolio-submenu-content a {
+      padding: 10px 16px;
+      font-size: 14px;
+    }
+
+    .portfolio-submenu-content a i {
+      margin-right: 8px;
+      width: 18px;
+      text-align: center;
+    }
+
     /* GitHub Dropdown Styles */  
     .github-dropdown {  
       position: relative;  
@@ -771,16 +817,23 @@
       <div class="portfolio-dropdown">
         <button class="portfolio-dropbtn"><i class="fas fa-briefcase"></i> Portfolio</button>
         <div class="portfolio-dropdown-content">
-          <a href="https://prityaa379.github.io/rahulfc/" target="_blank"><i class="fas fa-dumbbell"></i> Fitness Coach Landing Page 1</a>
-          <a href="https://prityaa379.github.io/rahulfc1/" target="_blank"><i class="fas fa-dumbbell"></i> Fitness Coach Landing Page 2</a>
-          <a href="https://prityaa379.github.io/rahulfc2/" target="_blank"><i class="fas fa-dumbbell"></i> Fitness Coach Landing Page 3</a>
-          <a href="https://prityaa379.github.io/rahulfc3/" target="_blank"><i class="fas fa-dumbbell"></i> Fitness Coach Landing Page 4</a>
-          <a href="https://prityaa379.github.io/rahulfc4/" target="_blank"><i class="fas fa-dumbbell"></i> Fitness Coach Landing Page 5</a>
-          <a href="https://prityaa379.github.io/rahulfc5/" target="_blank"><i class="fas fa-dumbbell"></i> Fitness Coach Landing Page 6</a>
-          <a href="https://prityaa379.github.io/rahulfc6/" target="_blank"><i class="fas fa-dumbbell"></i> Fitness Coach Landing Page 7</a>
-          <a href="https://prityaa379.github.io/rahulfc7/" target="_blank"><i class="fas fa-dumbbell"></i> Fitness Coach Landing Page 8</a>
-          <a href="https://prityaa379.github.io/rahulfc8/" target="_blank"><i class="fas fa-dumbbell"></i> Fitness Coach Landing Page 9</a>
-          <a href="https://prityaa379.github.io/rahulfc9/" target="_blank"><i class="fas fa-dumbbell"></i> Fitness Coach Landing Page 10</a>
+          <div class="portfolio-submenu">
+            <button class="portfolio-submenu-btn"><i class="fas fa-dumbbell"></i> Landing Pages for Fitness Coaches <i class="fas fa-caret-down"></i></button>
+            <div class="portfolio-submenu-content">
+              <a href="https://prityaa379.github.io/rahulfc/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 1</a>
+              <a href="https://prityaa379.github.io/rahulfc1/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 2</a>
+              <a href="https://prityaa379.github.io/rahulfc2/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 3</a>
+              <a href="https://prityaa379.github.io/rahulfc3/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 4</a>
+              <a href="https://prityaa379.github.io/rahulfc4/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 5</a>
+              <a href="https://prityaa379.github.io/rahulfc5/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 6</a>
+              <a href="https://prityaa379.github.io/rahulfc6/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 7</a>
+              <a href="https://prityaa379.github.io/rahulfc7/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 8</a>
+              <a href="https://prityaa379.github.io/rahulfc8/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 9</a>
+              <a href="https://prityaa379.github.io/rahulfc9/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 10</a>
+            </div>
+          </div>
+          <a href="#"><i class="fas fa-laptop-code"></i> Web Development Projects</a>
+          <a href="#"><i class="fas fa-mobile-alt"></i> Mobile Apps</a>
         </div>
         <div class="mirror-reflection"></div>
       </div>
