--- a/index.html
+++ b/index.html
@@ -268,11 +268,11 @@
       transform: translateX(100%);
     }
 
-    .services-section {
+    .services-section, .movies-section {
       margin: 30px 0;
     }
 
-    .services-title {
+    .services-title, .movies-title {
       text-align: center;
       margin-bottom: 20px;
       font-size: 24px;
@@ -786,436 +786,4 @@
       transform: translateX(5px);
     }
 
-    .youtube-dropdown:hover .youtube-dropdown-content {
-      display: block;
-    }
-
-    .youtube-dropdown:hover .youtube-dropbtn {
-      border-radius: 12px 12px 0 0;
-    }
-
-    .github-dropdown {
-      position: relative;
-      display: inline-block;
-      width: 90%;
-      margin: 15px auto;
-    }
-
-    .github-dropbtn {
-      display: block;
-      background: rgba(255, 42, 141, 0.15);
-      backdrop-filter: blur(10px);
-      color: var(--cosmic-white);
-      padding: 15px 20px;
-      border-radius: 12px;
-      text-decoration: none;
-      text-align: center;
-      font-weight: bold;
-      transition: all 0.4s ease;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-      position: relative;
-      width: 100%;
-      overflow: hidden;
-      border: 1px solid var(--glow-color);
-      cursor: pointer;
-    }
-
-    .github-dropbtn::before {
-      content: '';
-      position: absolute;
-      top: -50%;
-      left: -50%;
-      width: 200%;
-      height: 200%;
-      background: linear-gradient(to bottom right,
-          rgba(255, 42, 141, 0) 0%,
-          rgba(255, 42, 141, 0) 45%,
-          rgba(255, 42, 141, 0.5) 50%,
-          rgba(255, 42, 141, 0) 55%,
-          rgba(255, 42, 141, 0) 100%);
-      transform: rotate(30deg);
-      animation: shine 3s infinite;
-    }
-
-    .github-dropbtn:hover {
-      background: rgba(255, 42, 141, 0.25);
-      transform: translateY(-5px);
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5),
-        0 0 15px var(--glow-color);
-    }
-
-    .github-dropdown-content {
-      display: none;
-      position: relative;
-      background: rgba(255, 42, 141, 0.1);
-      backdrop-filter: blur(10px);
-      border-radius: 0 0 12px 12px;
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-      z-index: 1;
-      width: 100%;
-      margin-top: -15px;
-      padding-top: 15px;
-      border: 1px solid var(--glow-color);
-      border-top: none;
-    }
-
-    .github-dropdown-content a {
-      color: var(--cosmic-white);
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-      transition: all 0.3s ease;
-    }
-
-    .github-dropdown-content a:hover {
-      background-color: rgba(255, 42, 141, 0.2);
-      transform: translateX(5px);
-    }
-
-    .github-dropdown:hover .github-dropdown-content {
-      display: block;
-    }
-
-    .github-dropdown:hover .github-dropbtn {
-      border-radius: 12px 12px 0 0;
-    }
-
-    .gumroad-submenu {
-      position: relative;
-    }
-
-    .gumroad-submenu-btn {
-      width: 100%;
-      text-align: left;
-      background: transparent;
-      border: none;
-      color: var(--cosmic-white);
-      padding: 12px 16px;
-      font-size: 15px;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      transition: all 0.3s ease;
-    }
-
-    .gumroad-submenu-btn:hover {
-      background-color: rgba(255, 42, 141, 0.1);
-      transform: translateX(5px);
-    }
-
-    .gumroad-submenu-content {
-      display: none;
-      background: rgba(0, 0, 0, 0.2);
-      padding-left: 20px;
-    }
-
-    .gumroad-submenu:hover .gumroad-submenu-content {
-      display: block;
-    }
-
-    .gumroad-submenu-content a {
-      padding: 10px 16px;
-      font-size: 14px;
-    }
-
-    .gumroad-submenu-content a i {
-      margin-right: 8px;
-      width: 18px;
-      text-align: center;
-    }
-
-    .social-channels-section, .ebooks-section {
-      margin: 30px 0;
-    }
-  </style>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
-</head>
-
-<body>
-  <div class="particles" id="particles"></div>
-  <div class="container" id="main-container">
-    <div class="profile-img-container">
-      <img src="https://i.ibb.co/BKZv5FzD/IMG-20250613-062802-529.webp" class="profile-img" alt="Pritam">
-      <div class="profile-img-mirror"></div>
-    </div>
-    <h1>Pritam Jagtap</h1>
-    <p>Digital Creator | Developer | Visionary</p>
-
-    <!-- My Social Channels Section -->
-    <div class="social-channels-section">
-      <h2 class="services-title">My Social Channels</h2>
-      <div class="mirror-container">
-        <div class="instagram-dropdown">
-          <button class="instagram-dropbtn"><i class="fab fa-instagram"></i> Instagram</button>
-          <div class="instagram-dropdown-content">
-            <a href="https://www.instagram.com/prityaa379?igsh=c3B6b2ptejUwMjF4&utm_source=qr" target="_blank"><i class="fab fa-instagram"></i> prityaa379</a>
-            <a href="https://www.instagram.com/digitalconfvisions?igsh=MXF6Y2xxeDluMm1wZA%3D%3D&utm_source=qr" target="_blank"><i class="fab fa-instagram"></i> digitalconfvisions</a>
-            <a href="https://www.instagram.com/slumforlife/profilecard/?igsh=MWF1M2QwOGU3cG5oMA==" target="_blank"><i class="fab fa-instagram"></i> slumforlife</a>
-            <a href="https://www.instagram.com/tri_ptoworld?igsh=MTQ5dTRjMTdqcnA3cA%3D%3D&utm_source=qr" target="_blank"><i class="fab fa-instagram"></i> triptoworld</a>
-            <a href="https://www.instagram.com/stolen.stuff9?igsh=MTQzd2k3bmdtdmZncQ%3D%3D&utm_source=qr" target="_blank"><i class="fab fa-instagram"></i> stolenstuff9</a>
-          </div>
-        </div>
-        <div class="mirror-reflection"></div>
-      </div>
-      <div class="mirror-container">
-        <div class="youtube-dropdown">
-          <button class="youtube-dropbtn"><i class="fab fa-youtube"></i> YouTube</button>
-          <div class="youtube-dropdown-content">
-            <a href="https://youtube.com/@prityaa379?si=nXQegrscXMJ9nlO-" target="_blank"><i class="fab fa-youtube"></i> prityaa379</a>
-            <a href="https://youtube.com/@preetjagtap?si=jMSN64JYU-92jX7H" target="_blank"><i class="fab fa-youtube"></i> AI Case Study</a>
-            <a href="https://youtube.com/@dgvjns?si=kr3DO1VkNswNM_yT" target="_blank"><i class="fab fa-youtube"></i> digitalconfvisions</a>
-          </div>
-        </div>
-        <div class="mirror-reflection"></div>
-      </div>
-      <div class="mirror-container">
-        <a href="https://www.facebook.com/share/16fmTVSfFx/?mibextid=wwXIfr" class="link" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
-        <div class="mirror-reflection"></div>
-      </div>
-      <div class="mirror-container">
-        <a href="https://x.com/Prityaa379?t=_oyA6dOBxrm5O7wtdcbZpQ&s=09" class="link" target="_blank"><i class="fab fa-x-twitter"></i> X</a>
-        <div class="mirror-reflection"></div>
-      </div>
-      <div class="mirror-container">
-        <a href="https://www.linkedin.com/in/pritam-jagtap-00010b216?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="link" target="_blank"><i class="fab fa-linkedin"></i> Pritam Jagtap</a>
-        <div class="mirror-reflection"></div>
-      </div>
-      <div class="mirror-container">
-        <a href="https://github.com/PRITYAA379" class="link" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-        <div class="mirror-reflection"></div>
-      </div>
-    </div>
-
-    <!-- Your Free E-Books Section -->
-    <div class="ebooks-section">
-      <h2 class="services-title">Your Free E-Books</h2>
-      <div class="mirror-container">
-        <a href="#" class="link" target="_blank"><i class="fas fa-book-open"></i> E-Book 1: Digital Marketing Guide</a>
-        <div class="mirror-reflection"></div>
-      </div>
-      <div class="mirror-container">
-        <a href="#" class="link" target="_blank"><i class="fas fa-book-open"></i> E-Book 2: Web Development Basics</a>
-        <div class="mirror-reflection"></div>
-      </div>
-    </div>
-
-    <div class="mirror-container">
-      <a href="https://yourwebsite.com" class="link"><i class="fas fa-globe"></i> Visit My Website</a>
-      <div class="mirror-reflection"></div>
-    </div>
-
-    <!-- Portfolio Dropdown -->
-    <div class="mirror-container">
-      <div class="portfolio-dropdown">
-        <button class="portfolio-dropbtn"><i class="fas fa-briefcase"></i> Portfolio</button>
-        <div class="portfolio-dropdown-content">
-          <div class="portfolio-submenu">
-            <button class="portfolio-submenu-btn"><i class="fas fa-dumbbell"></i> Landing Pages for Fitness Coaches <i class="fas fa-caret-down"></i></button>
-            <div class="portfolio-submenu-content">
-              <a href="https://prityaa379.github.io/rahulfc/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 1</a>
-              <a href="https://prityaa379.github.io/rahulfc1/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 2</a>
-              <a href="https://prityaa379.github.io/rahulfc2/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 3</a>
-              <a href="https://prityaa379.github.io/rahulfc3/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 4</a>
-              <a href="https://prityaa379.github.io/rahulfc4/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 5</a>
-              <a href="https://prityaa379.github.io/rahulfc5/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 6</a>
-              <a href="https://prityaa379.github.io/rahulfc6/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 7</a>
-              <a href="https://prityaa379.github.io/rahulfc7/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 8</a>
-              <a href="https://prityaa379.github.io/rahulfc8/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 9</a>
-              <a href="https://prityaa379.github.io/rahulfc9/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 10</a>
-            </div>
-          </div>
-          <a href="#"><i class="fas fa-laptop-code"></i> Web Development Projects</a>
-          <a href="#"><i class="fas fa-mobile-alt"></i> Mobile Apps</a>
-        </div>
-        <div class="mirror-reflection"></div>
-      </div>
-    </div>
-
-    <!-- GitHub Dropdown -->
-    <div class="mirror-container">
-      <div class="github-dropdown">
-        <button class="github-dropbtn"><i class="fab fa-github"></i> GitHub</button>
-        <div class="github-dropdown-content">
-          <a href="https://github.com/PRITYAA379" target="_blank"><i class="fas fa-code-branch"></i> My Repositories</a>
-          <a href="https://github.com/PRITYAA379?tab=repositories" target="_blank"><i class="fas fa-box-open"></i> My Products</a>
-          <a href="https://github.com/sponsors/PRITYAA379" target="_blank"><i class="fas fa-heart"></i> Sponsor Me</a>
-          <a href="https://github.com/PRITYAA379?tab=subscriptions" target="_blank"><i class="fas fa-bell"></i> Subscribe</a>
-        </div>
-        <div class="mirror-reflection"></div>
-      </div>
-    </div>
-
-    <!-- Gumroad Dropdown Section -->
-    <div class="mirror-container">
-      <div class="github-dropdown">
-        <button class="github-dropbtn"><i class="fas fa-store"></i> Gumroad</button>
-        <div class="github-dropdown-content">
-          <div class="gumroad-submenu">
-            <button class="gumroad-submenu-btn"><i class="fas fa-star"></i> Subscriptions <i class="fas fa-caret-down"></i></button>
-            <div class="gumroad-submenu-content">
-              <a href="https://jagtappritam7.gumroad.com/l/npjvdt" target="_blank"><i class="fas fa-gem"></i> Gumroad Subscription</a>
-              <a href="https://gumroad.com/PRITYAA379/membership" target="_blank"><i class="fas fa-crown"></i> Membership</a>
-              <a href="https://gumroad.com/PRITYAA379/newsletter" target="_blank"><i class="fas fa-newspaper"></i> Newsletter</a>
-            </div>
-          </div>
-          <div class="gumroad-submenu">
-            <button class="gumroad-submenu-btn"><i class="fas fa-box-open"></i> Products <i class="fas fa-caret-down"></i></button>
-            <div class="gumroad-submenu-content">
-              <a href="https://jagtappritam7.gumroad.com/l/uplaw" target="_blank"><i class="fas fa-question-circle"></i> What is Gumroad?</a>
-              <a href="https://jagtappritam7.gumroad.com/l/qnsim" target="_blank"><i class="fas fa-link"></i> LINK IN BIO SAMPLES</a>
-              <a href="https://jagtappritam7.gumroad.com/l/qkevcg" target="_blank"><i class="fas fa-calendar-check"></i> Daily Productivity Planner</a>
-              <a href="https://jagtappritam7.gumroad.com/l/tdnocf" target="_blank"><i class="fas fa-chart-line"></i> Top 10 Digital Assets in India</a>
-              <a href="https://jagtappritam7.gumroad.com/l/pvoryz" target="_blank"><i class="fas fa-download"></i> Start Gumroad for Free</a>
-            </div>
-          </div>
-          <a href="https://gumroad.com/PRITYAA379" target="_blank"><i class="fas fa-store-alt"></i> Visit My Store</a>
-        </div>
-        <div class="mirror-reflection"></div>
-      </div>
-    </div>
-
-    <div class="mirror-container">
-      <a href="mailto:jagtappritam73@gmail.com" class="link"><i class="fas fa-envelope"></i> Email Me</a>
-      <div class="mirror-reflection"></div>
-    </div>
-
-    <div class="mirror-container">
-      <a href="tel:+919372035409" class="link"><i class="fas fa-phone"></i> Call Me</a>
-      <div class="mirror-reflection"></div>
-    </div>
-
-    <div class="mirror-container">
-      <a href="https://wa.me/919372035409?text=Hi%20Pritam%2C%20I%20saw%20your%204D%20Webpage%20and%20I'm%20interested%20in%20your%20services!" class="link" target="_blank"><i class="fab fa-whatsapp"></i> Chat on WhatsApp</a>
-      <div class="mirror-reflection"></div>
-    </div>
-
-    <div class="mirror-container">
-      <a href="https://prityaa379.github.io/theethicalglitchcontent/" class="link" target="_blank"><i class="fas fa-book"></i> Upcoming Books</a>
-      <div class="mirror-reflection"></div>
-    </div>
-
-    <!-- 3D Career Guide Button -->
-    <button class="career-button" onclick="window.open('https://calendly.com/jagtappritam73/book-your-slot', '_blank')">
-      <i class="fas fa-calendar-alt"></i> Schedule 15-Min Free Career Guide
-    </button>
-
-    <!-- Services Section -->
-    <div class="services-section">
-      <h2 class="services-title">My Services</h2>
-      <div class="services-container">
-        <!-- Digital Marketing Service -->
-        <div class="service-card">
-          <h3 class="service-title">
-            <i class="fas fa-bullhorn service-icon"></i>
-            Digital Marketing
-          </h3>
-          <p class="service-description">
-            Boost your online presence with comprehensive digital marketing strategies tailored to your business needs.
-          </p>
-          <ul class="service-features">
-            <li>Social Media Marketing</li>
-            <li>Search Engine Optimization (SEO)</li>
-            <li>Pay-Per-Click Advertising (PPC)</li>
-            <li>Content Marketing</li>
-            <li>Email Marketing Campaigns</li>
-          </ul>
-          <button class="service-button" onclick="window.open('https://calendly.com/jagtappritam73/book-your-slot', '_blank')">
-            Get Started
-          </button>
-        </div>
-
-        <!-- Web Development Service -->
-        <div class="service-card">
-          <h3 class="service-title">
-            <i class="fas fa-code service-icon"></i>
-            Web Development
-          </h3>
-          <p class="service-description">
-            Custom, responsive websites that look great on any device and deliver exceptional user experiences.
-          </p>
-          <ul class="service-features">
-            <li>Responsive Web Design</li>
-            <li>Frontend & Backend Development</li>
-            <li>E-commerce Solutions</li>
-            <li>Website Maintenance</li>
-            <li>Performance Optimization</li>
-          </ul>
-          <button class="service-button" onclick="window.open('https://calendly.com/jagtappritam73/book-your-slot', '_blank')">
-            Get Started
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <div class="social-links">
-      <a href="https://www.instagram.com/" class="social-link" style="--i: 0" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://x.com/Prityaa379?t=1wZ0UV_K_9DzXa_-y3_qSw&s=09" class="social-link" style="--i: 1" target="_blank"><i class="fab fa-x-twitter"></i></a>
-      <a href="https://www.linkedin.com/in/pritam-jagtap-00010b216" class="social-link" style="--i: 2" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/PRITYAA379" class="social-link" style="--i: 3" target="_blank"><i class="fab fa-github"></i></a>
-    </div>
-  </div>
-
-  <a href="https://wa.me/919372035409?text=Hi%20Pritam%2C%20I%20saw%20your%204D%20Webpage%20and%20I'm%20interested%20in%20your%20services!" class="whatsapp-float" target="_blank">
-    <i class="fab fa-whatsapp"></i>
-  </a>
-
-  <!-- Thank You Overlay -->
-  <div class="thank-you-overlay" id="thankYouOverlay">
-    <div>🌹 Thank You for Reaching Out 🌹</div>
-    <div id="roses"></div>
-  </div>
-
-  <script>
-    const overlay = document.getElementById("thankYouOverlay");
-    const roseContainer = document.getElementById("roses");
-    const particlesContainer = document.getElementById("particles");
-
-    // Create colorful particles
-    const colors = ['#ff2a8d', '#ff8cc6', '#ff0066', '#ff99cc'];
-    for (let i = 0; i < 50; i++) {
-      let particle = document.createElement("div");
-      particle.className = "particle";
-      particle.style.left = Math.random() * 100 + "vw";
-      particle.style.top = Math.random() * 100 + "vh";
-      particle.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
-      particle.style.animationDuration = (10 + Math.random() * 10) + "s";
-      particle.style.animationDelay = Math.random() * 5 + "s";
-      particle.style.width = (3 + Math.random() * 5) + "px";
-      particle.style.height = particle.style.width;
-      particlesContainer.appendChild(particle);
-    }
-
-    // Create roses for thank you overlay
-    function createRoses() {
-      const emojis = ['🌹', '🌸', '🌺', '🌻', '🌷', '💐', '🏵️'];
-      for (let i = 0; i < 20; i++) {
-        let rose = document.createElement("div");
-        rose.className = "rose";
-        rose.textContent = emojis[Math.floor(Math.random() * emojis.length)];
-        rose.style.left = Math.random() * 100 + "vw";
-        rose.style.animationDuration = (5 + Math.random() * 10) + "s";
-        rose.style.animationDelay = Math.random() * 5 + "s";
-        rose.style.fontSize = (20 + Math.random() * 30) + "px";
-        roseContainer.appendChild(rose);
-      }
-    }
-
-    // Show thank you overlay when links are clicked
-    document.querySelectorAll('a[href^="mailto:"], a[href^="tel:"], .link:not([target="_blank"]), .social-link:not([target="_blank"])').forEach(link => {
-      link.addEventListener('click', function(e) {
-        if (!this.getAttribute('target')) {
-          e.preventDefault();
-          createRoses();
-          overlay.style.display = 'flex';
-          setTimeout(() => {
-            overlay.style.display = 'none';
-            roseContainer.innerHTML = '';
-            window.location.href = this.href;
-          }, 3000);
-        }
-      });
-    });
-  </script>
-</body>
-</html>
+    .yo
